--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/themes": "^2.0.0",
     "axios": "^1.5.1",
     "json-server": "^0.17.4",
     "react": "^18.2.0",
