--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-draw": "^1.4.3",
     "@radix-ui/themes": "^2.0.0",
     "axios": "^1.5.1",
     "json-server": "^0.17.4",
+    "mapbox-gl": "^2.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
