--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@mapbox/mapbox-gl-draw": "^1.4.3",
     "@radix-ui/themes": "^2.0.0",
+    "@turf/turf": "^6.5.0",
     "axios": "^1.5.1",
     "json-server": "^0.17.4",
     "mapbox-gl": "^2.15.0",
