--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-mapbox-gl": "^5.1.1",
     "react-router-dom": "^6.16.0",
     "sass": "^1.68.0",
-    "styled-components": "^6.0.8"
+    "styled-components": "^6.0.8",
+    "turf": "^3.0.14"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
