--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@mapbox/mapbox-gl-draw": "^1.4.3",
     "@radix-ui/themes": "^2.0.0",
+    "@turf/buffer": "^6.5.0",
+    "@turf/collect": "^6.5.0",
     "@turf/turf": "^6.5.0",
     "axios": "^1.5.1",
     "json-server": "^0.17.4",
@@ -20,7 +22,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
-    "react-mapbox-gl": "^5.1.1",
     "react-router-dom": "^6.16.0",
     "sass": "^1.68.0",
     "styled-components": "^6.0.8",
