--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@turf/collect": "^6.5.0",
     "@turf/turf": "^6.5.0",
     "axios": "^1.5.1",
+    "geojson": "^0.5.0",
     "json-server": "^0.17.4",
     "mapbox-gl": "^2.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-map-gl": "^7.1.6",
     "react-router-dom": "^6.16.0",
     "sass": "^1.68.0",
     "styled-components": "^6.0.8",
