--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@turf/collect": "^6.5.0",
     "@turf/turf": "^6.5.0",
     "axios": "^1.5.1",
+    "chart.js": "^4.4.0",
     "geojson": "^0.5.0",
     "json-server": "^0.17.4",
     "mapbox-gl": "^2.15.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
